--- a/3D_Globe_With_Country_Hover/css/style.css
+++ b/3D_Globe_With_Country_Hover/css/style.css
@@ -10,39 +10,55 @@ html, body {
 
 #current {
   position: absolute;
-  color: #30619F;
+  color: rgb(8, 8, 8);
   font-family: sans-serif;
   margin-left: 4%;
-  margin-top: 4%;
+  margin-top: 10%;
+  text-shadow:  0 1px 0 hsl(174,5%,80%),0 2px 0 hsl(174,5%,75%),0 3px 0 hsl(174,5%,70%),0 4px 0 hsl(174,5%,66%),0 5px 0 hsl(174,5%,64%),0 6px 0 hsl(174,5%,62%),0 7px 0 hsl(174,5%,61%),
+	                 0 8px 0 hsl(174,5%,60%),0 0 5px rgba(0,0,0,.05),0 1px 3px rgba(0,0,0,.2),0 3px 5px rgba(0,0,0,.2),
+	               0 5px 10px rgba(0,0,0,.2),0 10px 10px rgba(0,0,0,.2),0 20px 20px rgba(0,0,0,.3);
 }
 
 #countryInfo {
   position: absolute;
-  color: #30619F;
+  color: rgb(8, 8, 8);
   font-family: sans-serif;
   font-size: 16px;
   margin-left: 4%;
-  margin-top: 10%;
+  margin-top: 14%;
   width: 200px;
-  
+  text-shadow:  0 1px 0 hsl(174,5%,80%),0 2px 0 hsl(174,5%,75%),0 3px 0 hsl(174,5%,70%),0 4px 0 hsl(174,5%,66%),0 5px 0 hsl(174,5%,64%),0 6px 0 hsl(174,5%,62%),0 7px 0 hsl(174,5%,61%),
+  0 8px 0 hsl(174,5%,60%),0 0 5px rgba(0,0,0,.05),0 1px 3px rgba(0,0,0,.2),0 3px 5px rgba(0,0,0,.2),
+0 5px 10px rgba(0,0,0,.2),0 10px 10px rgba(0,0,0,.2),0 20px 20px rgba(0,0,0,.3);
 }
 
 #area {
   position: absolute;
-  color: #30619F;
+  color: rgb(8, 8, 8);
   font-family: sans-serif;
   font-size: 16px;
   margin-left: 4%;
-  margin-top: 13%;
+  margin-top: 17%;
   width: 200px;
+  text-shadow:  0 1px 0 hsl(174,5%,80%),0 2px 0 hsl(174,5%,75%),0 3px 0 hsl(174,5%,70%),0 4px 0 hsl(174,5%,66%),0 5px 0 hsl(174,5%,64%),0 6px 0 hsl(174,5%,62%),0 7px 0 hsl(174,5%,61%),
+  0 8px 0 hsl(174,5%,60%),0 0 5px rgba(0,0,0,.05),0 1px 3px rgba(0,0,0,.2),0 3px 5px rgba(0,0,0,.2),
+0 5px 10px rgba(0,0,0,.2),0 10px 10px rgba(0,0,0,.2),0 20px 20px rgba(0,0,0,.3);
 }
 
 #population {
   position: absolute;
-  color: #30619F;
+  color: rgb(8, 8, 8);
   font-family: sans-serif;
   font-size: 16px;
   margin-left: 4%;
-  margin-top: 16%;
+  margin-top: 19%;
   width: 200px;
+  text-shadow:  0 1px 0 hsl(174,5%,80%),0 2px 0 hsl(174,5%,75%),0 3px 0 hsl(174,5%,70%),0 4px 0 hsl(174,5%,66%),0 5px 0 hsl(174,5%,64%),0 6px 0 hsl(174,5%,62%),0 7px 0 hsl(174,5%,61%),
+  0 8px 0 hsl(174,5%,60%),0 0 5px rgba(0,0,0,.05),0 1px 3px rgba(0,0,0,.2),0 3px 5px rgba(0,0,0,.2),
+0 5px 10px rgba(0,0,0,.2),0 10px 10px rgba(0,0,0,.2),0 20px 20px rgba(0,0,0,.3);
+}
+#h1 {
+  color:black;
+  text-shadow: 2px 2px 4px #000000;
+  text-align: center;
 }
