--- a/3D_Globe_With_Country_Hover/css/style.css
+++ b/3D_Globe_With_Country_Hover/css/style.css
@@ -13,7 +13,7 @@ html, body {
 }
 
 .country-name-text {
-  font-size: 30px;
+  font-size: 25px;
   margin-top: 150px;
   padding-bottom: 20px;
 }
@@ -24,22 +24,23 @@ html, body {
 }
 
 .globe-title {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  color: #fff;
   margin-left: 30px;
-  color: #2E3152;
   position: absolute;
   width: 100%;
 }
 
 .common-text-style {
   position: absolute;
-  color: rgb(8, 8, 8);
+  color: #fff;
   font-family: sans-serif;
   margin-left: 4%;
   width: 300px;
 }
 
 .common-text-shadow {
-  text-shadow:  0 1px 0 hsl(174,5%,80%),0 2px 0 hsl(174,5%,75%),0 3px 0 hsl(174,5%,70%),0 4px 0 hsl(174,5%,66%),0 5px 0 hsl(174,5%,64%),0 6px 0 hsl(174,5%,62%),0 7px 0 hsl(174,5%,61%),
-                0 8px 0 hsl(174,5%,60%),0 0 5px rgba(0,0,0,.05),0 1px 3px rgba(0,0,0,.2),0 3px 5px rgba(0,0,0,.2),
-                0 5px 10px rgba(0,0,0,.2),0 10px 10px rgba(0,0,0,.2),0 20px 20px rgba(0,0,0,.3);
+  text-shadow: 2px 2px 4px red;
 }
